# news

./: .env.example  .gitignore  CSL_7120 DLOps Project Proposal.docx  GRAFANA_MULTI_MODEL_UPDATE.md  PREDICT_ROUTE_FIX.md  QUICKSTART.md  README.md  TECHNICAL_ANALYSIS.md  docker-compose.yml  feedback.txt  report.aux  report.out  report.tex
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_pairwise_ab.py  003_ab_routing_state.py  97b6edc32a02_add_model_version_to_drift_reports.py
backend/app/: config.py  main.py
backend/app/models/: __init__.py  ab_routing_state.py  drift_report.py  pairwise.py  prediction.py  training_run.py
backend/app/routers/: ab_testing.py  drift.py  health.py  predict.py  training.py
backend/app/schemas/: ab_testing.py  drift.py  prediction.py  training.py
backend/app/services/: ab_routing.py  classifier.py  drift_detector.py  explainer.py  retrainer.py
backend/app/utils/: cache.py  file_processor.py  metrics.py  stats.py  storage.py
backend/app/workers/: ab_feedback_worker.py  drift_worker.py
backend/scripts/: simulate_drift.py
backend/tests/: test_ab_wilson.py  test_predict.py  test_retraining_dataset.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json
ml/: Dockerfile  pyproject.toml
ml/pipeline/: dataset.py  hf_hub.py  metrics.py  preference_dataset.py  registry.py  tokenizer.py  trainer.py  wandb_tracker.py
ml/scripts/: evaluate.py  push_to_hf.py  train_initial.py  train_preference.py
(+22 files in other folders)
