[project]
name = "ai-news-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "redis>=5.0",
    "minio>=7.2.0",
    "mlflow>=2.15.0",
    "boto3>=1.34.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
    "river>=0.21.0",
    "transformers-interpret>=0.10.0",
    "apscheduler>=3.10.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "wandb>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
