[project]
name = "ai-news-ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "scikit-learn>=1.4.0",
    "mlflow>=2.15.0",
    "boto3>=1.34.0",
    "minio>=7.2.0",
    "numpy>=1.26.0",
    "accelerate>=0.30.0",
    "wandb>=0.17.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
